[project]
name = "terragrunt-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest-ordering>=0.6",
    "typer>=0.12.5",
]

[project.scripts]
tgenv = "terragrunt_env.cmd:app"
tg-env = "terragrunt_env.cmd:app"
terragrunt-env = "terragrunt_env.cmd:app"
terragrunt = "terragrunt_env.cmd:cmd_exec"

[tool.uv]
package = true

[tool.uv.sources]
terragrunt-env = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pytest-depends>=1.0.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
]

[tool.coverage.report]
exclude_also = [
    "def __repr",
    "def __hash"
]
omit = [
    "src/terragrunt_env/cmd.py"
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/test_cmd.py"
